feat: jwt configuration
